[package]
name = "cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version ="^0.11.11", default-features = false  ,features = ["rustls-tls"] }
tokio = { version = "^1.19.2", features = ["full"] }
pdb = "^0.8.0"
axum = {version = "^0.5.4"}
serde = {version = "^1.0", features = ["derive"]}
serde_qs = "^0.9.2"
tracing = "^0.1.35"
tracing-subscriber = "^0.3.11"
base64 = "^0.13.0"
bincode ="^1.3.3"
[profile.release]
strip = true
lto = true
codegen-units = 1
#panic = 'abort'